[gd_scene load_steps=41 format=3 uid="uid://bki3og7grhfo7"]

[ext_resource type="Script" path="res://Objects/Enemies/enemy.gd" id="1_soyj2"]
[ext_resource type="Script" path="res://Objects/Enemies/enemy_hitbox.gd" id="2_ircfy"]
[ext_resource type="Texture2D" uid="uid://dioi1q8e5un3a" path="res://Art/ui/Over_hp.png" id="3_p8mbs"]
[ext_resource type="Texture2D" uid="uid://cucqo7hsarkgk" path="res://Art/ui/progress.png" id="4_fgnkl"]
[ext_resource type="Script" path="res://Objects/Enemies/enemy_health_bar.gd" id="5_evlc3"]
[ext_resource type="Script" path="res://Objects/Enemies/enemy_behavior.gd" id="6_gjb3e"]
[ext_resource type="Script" path="res://Objects/Enemies/charge_body_attack.gd" id="7_yh8ru"]
[ext_resource type="Texture2D" uid="uid://dmtthvhcuwmyx" path="res://Art/characters/monsters/plooty/green/plooty_green_attack.png" id="8_oh2sw"]
[ext_resource type="Texture2D" uid="uid://cl4cd24cgpq3l" path="res://Art/characters/monsters/plooty/plooty_green_charge.png" id="9_g5inr"]
[ext_resource type="Texture2D" uid="uid://denyvqqxj0tg4" path="res://Art/characters/monsters/plooty/plooty_green_charging.png" id="10_f6go4"]
[ext_resource type="Texture2D" uid="uid://dm38lg58210ju" path="res://Art/characters/monsters/plooty/green/plooty.png" id="11_8n43t"]
[ext_resource type="Texture2D" uid="uid://h2xnh1nk3yo1" path="res://Art/characters/monsters/plooty/green/plooty_move.png" id="12_05bxe"]
[ext_resource type="Script" path="res://hurtbox.gd" id="14_kemy0"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_y3mvr"]

[sub_resource type="CircleShape2D" id="CircleShape2D_u7c5t"]

[sub_resource type="Curve" id="Curve_2aaxq"]
max_value = 220.0
_data = [Vector2(0, 0), 0.0, 0.0, 0, 0, Vector2(0.243028, 204.236), 0.0, 0.0, 0, 0, Vector2(0.322709, 67.212), 0.0, 0.0, 0, 0, Vector2(1, 60.0501), 0.0, 0.0, 0, 0]
point_count = 4

[sub_resource type="CurveTexture" id="CurveTexture_r470d"]
curve = SubResource("Curve_2aaxq")

[sub_resource type="CircleShape2D" id="CircleShape2D_tav1t"]
radius = 110.018

[sub_resource type="CircleShape2D" id="CircleShape2D_8hwlg"]
radius = 28.907

[sub_resource type="CircleShape2D" id="CircleShape2D_x6eog"]
radius = 79.1581

[sub_resource type="AtlasTexture" id="AtlasTexture_jdxvm"]
atlas = ExtResource("8_oh2sw")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_wrgjs"]
atlas = ExtResource("8_oh2sw")
region = Rect2(16, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_fhlhj"]
atlas = ExtResource("8_oh2sw")
region = Rect2(32, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_wfyaw"]
atlas = ExtResource("9_g5inr")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_asig2"]
atlas = ExtResource("9_g5inr")
region = Rect2(16, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_l1age"]
atlas = ExtResource("9_g5inr")
region = Rect2(32, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_xj86u"]
atlas = ExtResource("9_g5inr")
region = Rect2(48, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_0gwps"]
atlas = ExtResource("9_g5inr")
region = Rect2(64, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_a8nnm"]
atlas = ExtResource("10_f6go4")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_bv4yg"]
atlas = ExtResource("10_f6go4")
region = Rect2(16, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_hxco3"]
atlas = ExtResource("10_f6go4")
region = Rect2(32, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_yqq81"]
atlas = ExtResource("10_f6go4")
region = Rect2(48, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_npxla"]
atlas = ExtResource("11_8n43t")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_jf2ba"]
atlas = ExtResource("11_8n43t")
region = Rect2(16, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_wribo"]
atlas = ExtResource("11_8n43t")
region = Rect2(32, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_vbqsj"]
atlas = ExtResource("11_8n43t")
region = Rect2(48, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_we10c"]
atlas = ExtResource("12_05bxe")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_0g8nb"]
atlas = ExtResource("12_05bxe")
region = Rect2(16, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_t1tqp"]
atlas = ExtResource("12_05bxe")
region = Rect2(32, 0, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_7267k"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_jdxvm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wrgjs")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fhlhj")
}],
"loop": false,
"name": &"attack",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_wfyaw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_asig2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_l1age")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xj86u")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0gwps")
}],
"loop": false,
"name": &"charge",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_a8nnm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bv4yg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hxco3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yqq81")
}],
"loop": false,
"name": &"charging",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_npxla")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jf2ba")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wribo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vbqsj")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_we10c")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0g8nb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_t1tqp")
}],
"loop": true,
"name": &"walk",
"speed": 5.0
}]

[node name="ChargingEnemy" type="CharacterBody2D"]
collision_layer = 4
collision_mask = 0
script = ExtResource("1_soyj2")

[node name="FloorCollision" type="CollisionShape2D" parent="."]
position = Vector2(0, 5.94)
rotation = 1.5708
scale = Vector2(0.545, 0.545)
shape = SubResource("CapsuleShape2D_y3mvr")

[node name="EnemyHitbox" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 0
script = ExtResource("2_ircfy")

[node name="CollisionShape2D" type="CollisionShape2D" parent="EnemyHitbox"]
scale = Vector2(1.215, 1.215)
shape = SubResource("CircleShape2D_u7c5t")

[node name="EnemyHpBar" type="TextureProgressBar" parent="."]
offset_left = -13.0
offset_top = -19.0
offset_right = 19.0
offset_bottom = -3.0
scale = Vector2(0.81, 0.81)
texture_over = ExtResource("3_p8mbs")
texture_progress = ExtResource("4_fgnkl")
script = ExtResource("5_evlc3")

[node name="EnemyBehavior" type="Node2D" parent="." node_paths=PackedStringArray("charge_body_attack")]
script = ExtResource("6_gjb3e")
charge_body_attack = NodePath("ChargeBodyAttack")

[node name="ChargeBodyAttack" type="Node2D" parent="EnemyBehavior"]
script = ExtResource("7_yh8ru")
charge_friction_curve = SubResource("CurveTexture_r470d")

[node name="ChargeAttackArea" type="Area2D" parent="EnemyBehavior/ChargeBodyAttack"]
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="EnemyBehavior/ChargeBodyAttack/ChargeAttackArea"]
shape = SubResource("CircleShape2D_tav1t")
debug_color = Color(0.791477, 0.190865, 0.92886, 0.42)

[node name="EnemyChaseRadius" type="Area2D" parent="EnemyBehavior"]
modulate = Color(0.895674, 0.498548, 0.465915, 1)
scale = Vector2(1.47, 1.47)
collision_layer = 0

[node name="EnemyChaseCollision" type="CollisionShape2D" parent="EnemyBehavior/EnemyChaseRadius"]
scale = Vector2(3.695, 3.695)
shape = SubResource("CircleShape2D_8hwlg")
debug_color = Color(0.783868, 0.333588, 0.710875, 0.42)

[node name="EnemyAttackRadius" type="Area2D" parent="EnemyBehavior"]
visible = false
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="EnemyBehavior/EnemyAttackRadius"]
shape = SubResource("CircleShape2D_x6eog")
debug_color = Color(0.709177, 0.481276, 0.201482, 0.42)

[node name="EnemyFlipMarker" type="Marker2D" parent="EnemyBehavior"]

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="EnemyBehavior/EnemyFlipMarker"]
scale = Vector2(2, 2)
sprite_frames = SubResource("SpriteFrames_7267k")
animation = &"charging"
autoplay = "idle"
speed_scale = 1.36

[node name="EnemyAttackOrigin" type="Marker2D" parent="EnemyBehavior/EnemyFlipMarker"]
position = Vector2(9.5, -3)

[node name="EnemyHurtbox" type="Area2D" parent="."]
collision_layer = 4
script = ExtResource("14_kemy0")

[node name="CollisionShape2D" type="CollisionShape2D" parent="EnemyHurtbox"]
scale = Vector2(1.215, 1.215)
shape = SubResource("CircleShape2D_u7c5t")
